--- a/Bai20-50/app/src/main/res/layout/activity_main.xml
+++ b/Bai20-50/app/src/main/res/layout/activity_main.xml
@@ -202,8 +202,15 @@
 <!--        app:layout_constraintTop_toBottomOf="@+id/listView" />-->
 
 
-    <ListView
-        android:id="@+id/listviewTraiCay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<!--    <ListView-->
+<!--        android:id="@+id/listviewTraiCay"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
+
+
+<!--    <GridView-->
+<!--        android:id="@+id/gridviewTen"-->
+<!--        android:numColumns="5"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
